--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,6 @@ php_flag display_errors on
 php_value error_reporting 32167
 
 # Establece el nivel de error.
-# Nos permite modificar al configuracion base de el archiv de configuracion de php que se encuentra en el servidor.
+# Nos permite modificar la configuracion base del archivo de configuracion de php que se encuentra en el servidor.
+
+#Este codigo solo funciona con el servidor APACHE
