--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,13 @@
-php_flag display_errors on
-php_value error_reporting 32167
+
+#php_flag display_errors on
+#php_value error_reporting 32167
+
 
 # Establece el nivel de error.
 # Nos permite modificar la configuracion base del archivo de configuracion de php que se encuentra en el servidor.
 
-#Este codigo solo funciona con el servidor APACHE
+#Este codigo general, solo funciona con el servidor APACHE, con el archivo htaccess ubicado en la seccion general.
+
+#De momento voy a comentar este codigo para no borrar este archivo y tenerlo aqui como base de conocimiento.
+
+#Los archivos .htaccess, mejoran la seguridad de nuestra web y sus datos
